--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   carousel_slider: ^5.0.0
   flutter_launcher_icons: ^0.14.3
+  cached_network_image: ^3.4.1
 
   cupertino_icons: ^1.0.8
 
